[project]
name = "threads"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Darin Kishore", email = "darinkishore@protonmail.com" }]
requires-python = ">=3.12"
dependencies = ["rich>=13.9.4", "pyperclip>=1.8.2"]

[project.scripts]
thread = "threads.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
